# the-ray-tracer-challenge-directxmath

./: .gitignore  CMakeLists.txt  NOTICE  README.md
main/: CMakeLists.txt  RenderWindow.cpp  RenderWindow.h  main.cpp
main/boost_tests/: CMakeLists.txt  TestTest.cpp
main/common/: CMakeLists.txt  Error.h  stdafx.h
main/google_tests/: CMakeLists.txt  IntersectionTest.cpp  MaterialTest.cpp  TestUtil.h  WorldTest.cpp
main/googletests/: CMakeLists.txt  TransformationTest.cpp
main/raytracer/: CMakeLists.txt  Camera.cpp  Camera.h  Canvas.cpp  Canvas.h  Computations.cpp  Computations.h  Cone.cpp  Cone.h  Constants.h  CoordinateProvider.cpp  CoordinateProvider.h  Cube.cpp  Cube.h  Cylinder.cpp  Cylinder.h  Floats.h  Group.cpp  Group.h  Intersectable.cpp  Intersectable.h  Intersection.cpp  Intersection.h  Material.cpp  Material.h  Matrix.cpp  Matrix.h  ParallelRenderer.cpp  ParallelRenderer.h  Pattern.h  PerlinNoise.cpp  PerlinNoise.h  Plane.cpp  Plane.h  PointLight.cpp  PointLight.h  Ray.cpp  Ray.h  Render.cpp  Render.h  (+11 more)
main/tests/: CMakeLists.txt  CameraTest.cpp  ConeTest.cpp  CubeTest.cpp  CylinderTest.cpp  GroupTest.cpp  IntersectionTest.cpp  LightTest.cpp  MaterialTest.cpp  RayTest.cpp  RenderTest.cpp  ShapeTest.cpp  SphereTest.cpp  TestConstants.h  TestUtil.h  TransformationTest.cpp  TriangleTest.cpp  VectorTest.cpp  WorldTest.cpp
